--- a/rts/Lua/CMakeLists.txt
+++ b/rts/Lua/CMakeLists.txt
@@ -45,6 +45,7 @@ SET(sources_engine_Lua
 		"${CMAKE_CURRENT_SOURCE_DIR}/LuaVFS.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/LuaWeaponDefs.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/LuaZip.cpp"
+		"${CMAKE_CURRENT_SOURCE_DIR}/LuaPack.cpp"
 	)
 
 MakeGlobal(sources_engine_Lua)
